# MyApplication

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lib_base/: build.gradle
lib_log/: build.gradle
lib_log/src/main/cpp/: ALogModule.cpp  CMakeLists.txt  LogUtil.h  common.h  jni_bridge.cpp  jni_bridge.h
lib_log/src/main/cpp/alog/: ALogAppender.cpp  ALogAppender.h  ALogBase.h  ALogCategory.cpp  ALogCategory.h  alog_interface.cpp  alog_interface.h
lib_log/src/main/cpp/alog/common/: tickcount.cpp  tickcount.h  time_utils.cpp  time_utils.h
lib_log/src/main/cpp/alog/common/android/: android_alarm.h
lib_log/src/main/cpp/alog/common/buffers/: autobuffer.cpp  autobuffer.h  log_base_buffer.cpp  log_base_buffer.h  log_zlib_buffer.cpp  log_zlib_buffer.h  log_zstd_buffer.cpp  log_zstd_buffer.h  ptr_buffer.cpp  ptr_buffer.h
lib_log/src/main/cpp/alog/common/crypt/: log_crypt.cpp  log_crypt.h  log_magic_num.h
lib_log/src/main/cpp/alog/common/crypt/micro-ecc/scripts/: mult_arm.py  mult_avr.py  mult_avr_extra.py  square_arm.py  square_avr.py
lib_log/src/main/cpp/alog/common/io/: file_handle.h  mapped_file.cpp  mapped_file.h  positioning.h  system_failure.h
lib_log/src/main/cpp/alog/common/thread/: atomic_oper.h  condition.h  lock.h  mutex.h  mutexvector.h  runnable.h  spinlock.h  thread.h
lib_log/src/main/cpp/alog/common/utils/: compiler_util.h  extract.cpp  extract.h  formater.cpp  mmap_util.cpp  mmap_util.h  strutil.cpp  strutil.h  threadinfo.cpp
lib_log/src/main/cpp/alog/jni/: ScopedJstring.cpp  ScopedJstring.h  common_functions.cpp  common_functions.h  scope_jenv.cpp  scope_jenv.h  var_cache.cpp  var_cache.h
lib_log/src/main/cpp/alog/zstd/: Readme.md  zstd.cpp  zstd.h
(+29 files in other folders)
